# scacchi_ia

./: .gitignore  README.md  generate_training_set.py  index.html  main.py  play.py  pyproject.toml  state.py  train.py
nets/: mini_alphazero_p913K_d50k_ep5.pth  mini_alphazero_p913K_d6000k.pth  value_net_10k.pth  value_net_2M.pth
