[project]
name = "scacchi-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chess>=1.11.2",
    "flask>=3.1.3",
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
]
